= master

* Fix typo in private method name in delete_empty_headers plugin (mculpt) (#279)

= 3.58.0 (2022-07-13)

* Add filter_common_logger plugin for skipping the logging of certain requests when using the common_logger plugin (jeremyevans)

* Make exception_page plugin use Exception#detailed_message on Ruby 3.2+ (jeremyevans)

* Make heartbeat plugin compatible with recent changes in the rack master branch (jeremyevans)

= 3.57.0 (2022-06-14)

* Make static_routing plugin depend on the hash_paths instead of the hash_routes plugin (jeremyevans)

* Split hash_branches and hash_paths plugins from hash_routes plugin (jeremyevans)

* Hex escape unprintable characters in common_logger plugin output (jeremyevans)

* Add hash_branch_view_subdir plugin for automatically appending a view subdirectory on a successful hash branch (jeremyevans)

= 3.56.0 (2022-05-13)

* Make status_303 plugin use 303 responses for HTTP/2 and higher versions (jeremyevans)

* Add RodaRequest#http_version for determining the HTTP version in use (jeremyevans)

* Do not set a body for 405 responses when using the verb methods in the not_allowed plugin (jeremyevans) (#267)

* Support status_handler method :keep_headers option in status_handler plugin (jeremyevans) (#267)

* Make not_allowed plugin have r.root return 405 responses for non-GET requests (jeremyevans) (#266)

* In Rack 3, only require the parts of rack used by Roda, instead of requiring rack itself and relying on autoload (jeremyevans)
 
* Add run_require_slash plugin, for skipping application dispatch for remaining paths that would violate Rack SPEC (jeremyevans)

= 3.55.0 (2022-04-12)

* Allow passing blocks to the view method in the render plugin (jeremyevans) (#262)

* Add :forward_response_headers middleware plugin option to use app headers as default for response (janko) (#259)

= 3.54.0 (2022-03-14)

* Make chunked plugin not use Transfer-Encoding: chunked by default (jeremyevans)
