@@ -56,6 +56,7 @@
       <li><a href="rdoc/classes/Roda/RodaPlugins/UnescapePath.html">unescape_path</a>: Decodes URL-encoded PATH_INFO before routing.</li>
     </ul></li>
     <li>Rendering/View: <ul>
+      <li><a href="rdoc/classes/Roda/RodaPlugins/AdditionalRenderEngines.html">additional_render_engines</a>: Allows for considering multiple render engines, using path for first template that exists.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/AdditionalViewDirectories.html">additional_view_directories</a>: Allows for checking for templates in multiple view directories, using path for first template that exists.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/Assets.html">assets</a>: Adds support for rendering CSS/JS javascript assets on the fly in development, or compiling them into a single compressed file in production.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/AssetsPreloading.html">assets_preloading</a>: Adds support for generating browser-hinting preload link tags and headers.</li>
